--- a/PositionIn/Base.lproj/Main.storyboard
+++ b/PositionIn/Base.lproj/Main.storyboard
@@ -7,7 +7,7 @@
         <!--Main Menu View Controller-->
         <scene sceneID="ZUY-IO-Abg">
             <objects>
-                <viewController storyboardIdentifier="MainMenuStoryboardId" id="BFL-Ne-hYV" customClass="MainMenuViewController" customModule="PositionIn" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="MainMenuViewController" id="BFL-Ne-hYV" customClass="MainMenuViewController" customModule="PositionIn" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="K8b-ew-d1a"/>
                         <viewControllerLayoutGuide type="bottom" id="t00-gN-snp"/>
@@ -46,8 +46,7 @@
         <!--Navigation Controller-->
         <scene sceneID="Ffe-yH-6Ub">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="c2n-hZ-cGe" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <navigationController id="hew-RE-2CB" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="DummyMapNavigationController" id="hew-RE-2CB" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="ba7-E9-Omt">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -56,13 +55,14 @@
                         <segue destination="nw9-Ck-dbi" kind="relationship" relationship="rootViewController" id="UuW-O4-vdY"/>
                     </connections>
                 </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="c2n-hZ-cGe" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="241" y="-95"/>
         </scene>
         <!--Map View Controller-->
         <scene sceneID="wfN-Bx-Jle">
             <objects>
-                <viewController storyboardIdentifier="MapStoryboardId" id="nw9-Ck-dbi" customClass="MapViewController" customModule="PositionIn" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="MapViewController" id="nw9-Ck-dbi" customClass="MapViewController" customModule="PositionIn" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="ddq-TF-bO1"/>
                         <viewControllerLayoutGuide type="bottom" id="aMi-1E-8EB"/>
