--- a/PositionIn/MainMenu/PositionIn.MainMenuCell.xib
+++ b/PositionIn/MainMenu/PositionIn.MainMenuCell.xib
@@ -7,7 +7,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="MainMenuCell" id="YvX-wa-ltC" customClass="MainMenuCell" customModule="PositionIn" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="PositionIn.MainMenuCell" id="YvX-wa-ltC" customClass="MainMenuCell" customModule="PositionIn" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="YvX-wa-ltC" id="2Bg-jC-e6c">
@@ -23,6 +23,7 @@
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="kEO-O2-xdy">
                         <rect key="frame" x="30" y="0.0" width="44" height="44"/>
                         <constraints>
+                            <constraint firstAttribute="height" constant="44" id="EbJ-5a-QjI"/>
                             <constraint firstAttribute="width" constant="44" id="Wwa-64-RCy"/>
                         </constraints>
                     </imageView>
