--- a/PositionIn/MainMenu/PositionIn.MainMenuCell.xib
+++ b/PositionIn/MainMenu/PositionIn.MainMenuCell.xib
@@ -8,34 +8,36 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="PositionIn.MainMenuCell" id="YvX-wa-ltC" customClass="MainMenuCell" customModule="PositionIn" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="48"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="YvX-wa-ltC" id="2Bg-jC-e6c">
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BPh-TQ-57b">
-                        <rect key="frame" x="0.0" y="0.0" width="20" height="43.5"/>
-                        <color key="backgroundColor" red="0.0039215686269999999" green="0.58823529409999997" blue="0.98823529409999999" alpha="1" colorSpace="calibratedRGB"/>
+                        <rect key="frame" x="0.0" y="0.0" width="10" height="47.5"/>
+                        <color key="backgroundColor" red="0.13725490200000001" green="0.4431372549" blue="0.83529411760000005" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="tintColor" red="0.13725490200000001" green="0.4431372549" blue="0.83529411760000005" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="20" id="PI8-7U-wMh"/>
+                            <constraint firstAttribute="width" constant="10" id="PI8-7U-wMh"/>
                         </constraints>
                     </view>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="kEO-O2-xdy">
-                        <rect key="frame" x="30" y="0.0" width="44" height="44"/>
+                    <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="MainMenuCategories" translatesAutoresizingMaskIntoConstraints="NO" id="kEO-O2-xdy">
+                        <rect key="frame" x="10" y="0.0" width="48" height="48"/>
+                        <color key="tintColor" red="0.13725490200000001" green="0.4431372549" blue="0.83529411760000005" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="44" id="EbJ-5a-QjI"/>
-                            <constraint firstAttribute="width" constant="44" id="Wwa-64-RCy"/>
+                            <constraint firstAttribute="height" constant="48" id="EbJ-5a-QjI"/>
+                            <constraint firstAttribute="width" constant="48" id="Wwa-64-RCy"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IWy-ep-G0u">
-                        <rect key="frame" x="79" y="11.5" width="236" height="20.5"/>
+                        <rect key="frame" x="63" y="13.5" width="252" height="20.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="kEO-O2-xdy" firstAttribute="leading" secondItem="BPh-TQ-57b" secondAttribute="trailing" constant="10" id="0f5-dE-flM"/>
+                    <constraint firstItem="kEO-O2-xdy" firstAttribute="leading" secondItem="BPh-TQ-57b" secondAttribute="trailing" id="0f5-dE-flM"/>
                     <constraint firstItem="IWy-ep-G0u" firstAttribute="leading" secondItem="kEO-O2-xdy" secondAttribute="trailing" constant="5" id="1zK-E5-f3j"/>
                     <constraint firstItem="BPh-TQ-57b" firstAttribute="leading" secondItem="2Bg-jC-e6c" secondAttribute="leading" id="68A-uT-TgV"/>
                     <constraint firstAttribute="bottom" secondItem="kEO-O2-xdy" secondAttribute="bottom" id="HLN-6c-1Td"/>
@@ -56,6 +58,7 @@
                     </mask>
                 </variation>
             </tableViewCellContentView>
+            <color key="tintColor" red="0.13725490200000001" green="0.4431372549" blue="0.83529411760000005" alpha="1" colorSpace="calibratedRGB"/>
             <connections>
                 <outlet property="iconImageView" destination="kEO-O2-xdy" id="FnC-RZ-G6A"/>
                 <outlet property="selectionIndicatorView" destination="BPh-TQ-57b" id="ydh-aC-ySU"/>
@@ -64,4 +67,7 @@
             <point key="canvasLocation" x="404" y="291"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="MainMenuCategories" width="24" height="24"/>
+    </resources>
 </document>
