--- a/PositionIn/MainMenu/PositionIn.MainMenuViewController.xib
+++ b/PositionIn/MainMenu/PositionIn.MainMenuViewController.xib
@@ -15,15 +15,15 @@
             <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="H3n-OD-Lqk">
-                    <rect key="frame" x="0.0" y="0.0" width="600" height="120"/>
-                    <color key="backgroundColor" red="0.0039215686269999999" green="0.58823529409999997" blue="0.98823529409999999" alpha="1" colorSpace="calibratedRGB"/>
+                <imageView userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="MenuLogo" translatesAutoresizingMaskIntoConstraints="NO" id="H3n-OD-Lqk">
+                    <rect key="frame" x="0.0" y="0.0" width="600" height="80"/>
+                    <color key="backgroundColor" red="0.13725490196078433" green="0.44313725490196076" blue="0.83529411764705885" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="120" id="CYI-T1-tSm"/>
+                        <constraint firstAttribute="height" constant="80" id="CYI-T1-tSm"/>
                     </constraints>
                 </imageView>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="9te-5M-xLn" customClass="TableView" customModule="PosInCore">
-                    <rect key="frame" x="0.0" y="120" width="600" height="480"/>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="9te-5M-xLn" customClass="TableView" customModule="PosInCore">
+                    <rect key="frame" x="0.0" y="80" width="600" height="520"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                 </tableView>
             </subviews>
@@ -39,4 +39,7 @@
             </constraints>
         </view>
     </objects>
+    <resources>
+        <image name="MenuLogo" width="173" height="38"/>
+    </resources>
 </document>
