--- a/PositionIn/MainMenu/PositionIn.MainMenuViewController.xib
+++ b/PositionIn/MainMenu/PositionIn.MainMenuViewController.xib
@@ -15,27 +15,39 @@
             <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="MenuLogo" translatesAutoresizingMaskIntoConstraints="NO" id="H3n-OD-Lqk">
-                    <rect key="frame" x="0.0" y="0.0" width="600" height="80"/>
-                    <color key="backgroundColor" red="0.13725490196078433" green="0.44313725490196076" blue="0.83529411764705885" alpha="1" colorSpace="calibratedRGB"/>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Cf8-Nh-HyU" userLabel="HeaderView">
+                    <rect key="frame" x="0.0" y="0.0" width="600" height="64"/>
+                    <subviews>
+                        <imageView userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="MenuLogo" translatesAutoresizingMaskIntoConstraints="NO" id="H3n-OD-Lqk">
+                            <rect key="frame" x="10" y="4" width="590" height="60"/>
+                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="60" id="4Y0-rV-eyL"/>
+                            </constraints>
+                        </imageView>
+                    </subviews>
+                    <color key="backgroundColor" red="0.13725490200000001" green="0.4431372549" blue="0.83529411760000005" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="80" id="CYI-T1-tSm"/>
+                        <constraint firstAttribute="trailing" secondItem="H3n-OD-Lqk" secondAttribute="trailing" id="7RD-XZ-Dsl"/>
+                        <constraint firstAttribute="bottom" secondItem="H3n-OD-Lqk" secondAttribute="bottom" id="LOR-C7-BDl"/>
+                        <constraint firstItem="H3n-OD-Lqk" firstAttribute="top" secondItem="Cf8-Nh-HyU" secondAttribute="top" constant="4" id="eVr-R1-xqq"/>
+                        <constraint firstItem="H3n-OD-Lqk" firstAttribute="leading" secondItem="Cf8-Nh-HyU" secondAttribute="leading" constant="10" id="z3v-Ry-Fh4"/>
                     </constraints>
-                </imageView>
+                </view>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="9te-5M-xLn" customClass="TableView" customModule="PosInCore">
-                    <rect key="frame" x="0.0" y="80" width="600" height="520"/>
+                    <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                 </tableView>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstItem="9te-5M-xLn" firstAttribute="top" secondItem="H3n-OD-Lqk" secondAttribute="bottom" id="9yz-59-wFu"/>
+                <constraint firstItem="Cf8-Nh-HyU" firstAttribute="top" secondItem="sXl-IH-QGY" secondAttribute="top" id="AZ2-I3-VHj"/>
                 <constraint firstAttribute="bottom" secondItem="9te-5M-xLn" secondAttribute="bottom" id="F95-qj-icg"/>
-                <constraint firstItem="H3n-OD-Lqk" firstAttribute="leading" secondItem="sXl-IH-QGY" secondAttribute="leading" id="JN7-dE-Ala"/>
-                <constraint firstItem="H3n-OD-Lqk" firstAttribute="top" secondItem="sXl-IH-QGY" secondAttribute="top" id="RWQ-b6-Lha"/>
+                <constraint firstAttribute="trailing" secondItem="Cf8-Nh-HyU" secondAttribute="trailing" id="P0c-O5-cll"/>
                 <constraint firstItem="9te-5M-xLn" firstAttribute="leading" secondItem="sXl-IH-QGY" secondAttribute="leading" id="SXx-Hd-Y0s"/>
                 <constraint firstAttribute="trailing" secondItem="9te-5M-xLn" secondAttribute="trailing" id="VXj-yS-ZEk"/>
-                <constraint firstAttribute="trailing" secondItem="H3n-OD-Lqk" secondAttribute="trailing" id="t9k-Ci-8Qc"/>
+                <constraint firstItem="Cf8-Nh-HyU" firstAttribute="leading" secondItem="sXl-IH-QGY" secondAttribute="leading" id="e03-oe-hQM"/>
+                <constraint firstItem="9te-5M-xLn" firstAttribute="top" secondItem="Cf8-Nh-HyU" secondAttribute="bottom" id="pP3-cz-bWb"/>
             </constraints>
         </view>
     </objects>
