use constraints wrapper, add blur view

--- a/PositionIn/Browse/PositionIn.BrowseViewController.xib
+++ b/PositionIn/Browse/PositionIn.BrowseViewController.xib
@@ -18,6 +18,9 @@
                 <tabBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uBe-OX-fNL">
                     <rect key="frame" x="0.0" y="551" width="600" height="49"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="49" id="hJS-Ew-nJV"/>
+                    </constraints>
                     <items>
                         <tabBarItem systemItem="favorites" id="wfg-9f-l2Z"/>
                         <tabBarItem systemItem="more" id="oDl-kc-XRJ"/>
