--- a/PositionIn/Browse/PositionIn.BrowseViewController.xib
+++ b/PositionIn/Browse/PositionIn.BrowseViewController.xib
@@ -23,9 +23,11 @@
                         <constraint firstAttribute="height" constant="49" id="hJS-Ew-nJV"/>
                     </constraints>
                     <items>
-                        <tabBarItem systemItem="favorites" id="wfg-9f-l2Z"/>
-                        <tabBarItem systemItem="more" id="oDl-kc-XRJ"/>
+                        <tabBarItem title="For You" id="wfg-9f-l2Z"/>
+                        <tabBarItem title="Near" id="oDl-kc-XRJ"/>
                     </items>
+                    <color key="tintColor" red="0.13725490200000001" green="0.4431372549" blue="0.83529411760000005" alpha="1" colorSpace="calibratedRGB"/>
+                    <color key="barTintColor" red="0.94117647058823528" green="0.94117647058823528" blue="0.94117647058823528" alpha="1" colorSpace="calibratedRGB"/>
                 </tabBar>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="f02-Vb-KtN">
                     <rect key="frame" x="0.0" y="0.0" width="600" height="551"/>
@@ -33,7 +35,7 @@
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Oh4-XU-mlM" customClass="AddMenuView" customModule="PositionIn" customModuleProvider="target">
                     <rect key="frame" x="275" y="540" width="50" height="50"/>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <color key="backgroundColor" red="0.0039215686269999999" green="0.58823529409999997" blue="0.98823529409999999" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="50" id="QUo-SP-wgs"/>
                         <constraint firstAttribute="height" constant="50" id="abW-xh-S2h"/>
