--- a/PositionIn/Browse/PositionIn.BrowseViewController.xib
+++ b/PositionIn/Browse/PositionIn.BrowseViewController.xib
@@ -8,6 +8,7 @@
             <connections>
                 <outlet property="addMenu" destination="Oh4-XU-mlM" id="mSF-6s-0uT"/>
                 <outlet property="contentView" destination="f02-Vb-KtN" id="rlr-To-ZCC"/>
+                <outlet property="tabbar" destination="uBe-OX-fNL" id="uso-2R-iOw"/>
                 <outlet property="view" destination="apz-CI-lnL" id="Ctj-nF-5fk"/>
             </connections>
         </placeholder>
@@ -16,16 +17,13 @@
             <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <tabBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uBe-OX-fNL">
+                <tabBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uBe-OX-fNL" customClass="BrowseTabbar" customModule="PositionIn" customModuleProvider="target">
                     <rect key="frame" x="0.0" y="551" width="600" height="49"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="49" id="hJS-Ew-nJV"/>
                     </constraints>
-                    <items>
-                        <tabBarItem title="For You" image="TabbarForYou" selectedImage="TabbarForYouSelected" id="wfg-9f-l2Z"/>
-                        <tabBarItem title="Near" image="TabbarNear" selectedImage="TabbarNearSelected" id="oDl-kc-XRJ"/>
-                    </items>
+                    <items/>
                     <color key="tintColor" red="0.13725490200000001" green="0.4431372549" blue="0.83529411760000005" alpha="1" colorSpace="calibratedRGB"/>
                     <color key="barTintColor" red="0.94117647058823528" green="0.94117647058823528" blue="0.94117647058823528" alpha="1" colorSpace="calibratedRGB"/>
                 </tabBar>
@@ -62,10 +60,4 @@
             </variation>
         </view>
     </objects>
-    <resources>
-        <image name="TabbarForYou" width="32" height="32"/>
-        <image name="TabbarForYouSelected" width="32" height="32"/>
-        <image name="TabbarNear" width="32" height="32"/>
-        <image name="TabbarNearSelected" width="32" height="32"/>
-    </resources>
 </document>
